--- a/ESAN.EDU.PE.MSA/ESANMSA/Areas/Alumno/Views/Evaluacion/_PartialFinEvaluacion.cshtml
+++ b/ESAN.EDU.PE.MSA/ESANMSA/Areas/Alumno/Views/Evaluacion/_PartialFinEvaluacion.cshtml
@@ -1,1 +1,4 @@
-﻿<h1>EVALUACIÓN CONCLUIDA.</h1>
+﻿<div class="text-center alert alert-success">
+    <h1><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span> <strong>Muchas gracias.</strong> <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></h1>
+    <h2>La evaluación fue terminada correctamente.</h2>
+</div>
