--- a/ESAN.EDU.PE.MSA/ESANMSA/Areas/Seguridad/Views/Principal/Index.cshtml
+++ b/ESAN.EDU.PE.MSA/ESANMSA/Areas/Seguridad/Views/Principal/Index.cshtml
@@ -2,8 +2,8 @@
 @{
     ViewBag.Title = "Index";
 }
-<h2 class="page-header">Dashboard</h2>
-<!-- /.row -->
+<h2 class="page-header">BIENVENIDO</h2>
+@*<!-- /.row -->
 <div class="row">
     <div class="col-lg-3 col-md-6">
         <div class="panel panel-primary">
@@ -563,5 +563,5 @@
         <!-- /.panel .chat-panel -->
     </div>
     <!-- /.col-lg-4 -->
-</div>
+</div>*@
 <!-- /.row -->
